May have finally stopped the bleeding.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -14,7 +14,7 @@ $default-transition-duration: .5s;
 
 // Susy
 $susy: (
-  columns: 12,
+  columns: 14,
   gutters: 30px/90px,
   global-box-sizing: border-box
 );
